fix hidden bulk action safari

--- a/src/components/tables/orders/style.scss
+++ b/src/components/tables/orders/style.scss
@@ -398,7 +398,6 @@
 		left: 0;
 		width: 100%;
 		z-index: 1000;
-		overflow: auto;
 		.wrapper {
 			background: $white;
 			padding: 5px;
