--- a/src/pages/orders/style.scss
+++ b/src/pages/orders/style.scss
@@ -395,7 +395,6 @@
 		padding: 5px;
 		display: flex;
 		z-index: 2;
-		overflow: auto;
 		.btn-group {
 			&__item {
 				background: $white;
